chore: target jdk 8